--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -69,11 +69,37 @@ body{
 	height: 100px;
 }
 
-.app-clock{
-	position: relative;
-	margin: 0%;
-	padding: 0%;
-	display: block;
-	float: right;
+.quotes{
+	padding-top: 10%;
 	color: white;
+	font-size: 72px;
+	display: block;
+	text-align: center;
+	margin: auto;
+}
+
+.app-clock{
+	color: white;
+}
+
+.owner-messages{
+	color: white;
+}
+
+.footer{
+	color: white;
+	position: absolute;
+	bottom: 0%;
+	width: 100%;
+	height: 10%;
+}
+.company-contact{
+	margin: 1%;
+	float: left;
+	display: inline;
+}
+.about-cazam{
+	margin: 1%;
+	float: right;
+	display: inline;
 }
